2014-08-29         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Continuing on reviewer comments, and other
	bug fixes, miscellanious improvements.

2014-08-26         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Use a different mechanism to exclude
	exercises. Remove use of LC_ALL in an example; doesn't seem
	to be needed anymore.

2014-08-25         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Exercises are excluded from print edition.

2014-08-24         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Continuing on reviewer comments.

2014-08-23         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Continuing on reviewer comments.

2014-08-22         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Continuing on reviewer comments.

2014-08-20         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Continuing on reviewer comments.

2014-08-16         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Continuing on reviewer comments.

2014-08-15         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Continuing on reviewer comments.

2014-08-13         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Starting on reviewer comments.
	Update acknowledgements.

2014-08-06         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Misc minor additions.

2014-08-03         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: For sprintf %c document that if value is a valid
	wide character, gawk uses the low 8 bits of the value.

	Unrelated:

	* gawktexi.in: Fix doc for API get_record - errcode needs to
	be greater than zero.

2014-07-04         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Bracket Expressions): Add a note about how to
	match ASCII characters.  Thanks to Hermann Peifer.

2014-06-25         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Update permissions on copyright page per