@@ -31161,6 +31161,10 @@ Index
 * ? (question mark), regexp operator <1>: GNU Regexp Operators.
                                                               (line  59)
 * ? (question mark), regexp operator:    Regexp Operators.    (line 111)
+* @-notation for indirect function calls: Indirect Calls.     (line  47)
+* @include directive:                    Include Files.       (line   8)
+* @load directive:                       Loading Shared Libraries.
+                                                              (line   8)
 * [] (square brackets), regexp operator: Regexp Operators.    (line  56)
 * \ (backslash):                         Comments.            (line  50)
 * \ (backslash), \" escape sequence:     Escape Sequences.    (line  82)
@@ -32229,6 +32233,8 @@ Index
 * extensions, common, single character fields: Single Character Fields.
                                                               (line   6)
 * extensions, in gawk, not in POSIX awk: POSIX/GNU.           (line   6)
+* extensions, loading, @load directive:  Loading Shared Libraries.
+                                                              (line   8)
 * extensions, mawk:                      Common Extensions.   (line   6)
 * extensions, where to find:             gawkextlib.          (line   6)
 * extract.awk program:                   Extract Program.     (line  79)
@@ -32279,6 +32285,7 @@ Index
 * FIELDWIDTHS variable <1>:              User-modified.       (line  37)
 * FIELDWIDTHS variable:                  Constant Size.       (line  23)
 * file descriptors:                      Special FD.          (line   6)
+* file inclusion, @include directive:    Include Files.       (line   8)
 * file names, distinguishing:            Auto-set.            (line  56)
 * file names, in compatibility mode:     Special Caveats.     (line   9)
 * file names, standard streams in gawk:  Special FD.          (line  46)
@@ -32405,6 +32412,7 @@ Index
 * FUNCTAB array:                         Auto-set.            (line 115)
 * function calls:                        Function Calls.      (line   6)
 * function calls, indirect:              Indirect Calls.      (line   6)
+* function calls, indirect, @-notation for: Indirect Calls.   (line  47)
 * function definition example:           Function Example.    (line   6)
 * function pointers:                     Indirect Calls.      (line   6)
 * functions, arrays as parameters to:    Pass By Value/Reference.
@@ -32685,10 +32693,12 @@ Index
 * in operator, testing if array element exists: Reference to Elements.
                                                               (line  38)
 * in operator, use in loops:             Scanning an Array.   (line  17)
+* including files, @include directive:   Include Files.       (line   8)
 * increment operators:                   Increment Ops.       (line   6)
 * index:                                 String Functions.    (line 155)
 * indexing arrays:                       Array Intro.         (line  50)
 * indirect function calls:               Indirect Calls.      (line   6)
+* indirect function calls, @-notation:   Indirect Calls.      (line  47)
 * infinite precision:                    Arbitrary Precision Arithmetic.
                                                               (line   6)
 * info debugger command:                 Debugger Info.       (line  13)
@@ -32861,6 +32871,8 @@ Index
 * list debugger command:                 Miscellaneous Debugger Commands.
                                                               (line  72)
 * list function definitions, in debugger: Debugger Info.      (line  30)
+* loading extensions, @load directive:   Loading Shared Libraries.
+                                                              (line   8)
 * loading, extensions:                   Options.             (line 173)
 * local variables, in a function:        Variable Scope.      (line   6)
 * locale categories:                     Explaining gettext.  (line  81)
