@@ -1,3 +1,9 @@
+2014-09-01         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gaktexi.in: Add index entry for @ - @load, @include,
+	and indirect function calls. Thanks to "Kenny McKormack" in
+	comp.lang.awk.
+
 2014-08-29         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Continuing on reviewer comments, and other
